[Qt] QNX build fails due to reference to MADV_FREE_REUSE and MADV_FREE_REUSABLE https://bugs.webkit.org/show_bug.cgi?id=93843

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-08-14
Reviewed by Simon Hausmann.

QNX does not implement MADV_FREE_REUSE nor MADV_FREE_REUSABLE.
The Blackberry port already sets the define to use the system
malloc, which is now also done for QNX in general.

* wtf/Platform.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@125553 bbb929c8-8fbe-4397-9dbb-9b2b20218538